--- a/src/components/Faq/Faqitem/FaqItem.css
+++ b/src/components/Faq/Faqitem/FaqItem.css
@@ -1,9 +1,12 @@
 .faq_title{
     font-family: 'Signika', sans-serif;
-    font-size: 30px;
-    font-weight: 500;
     border-bottom: solid 2px #F17456;
     
+}
+
+.faq_title h3{
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .faq_title:hover{
