--- a/src/components/Faq/Faqitem/FaqItem.css
+++ b/src/components/Faq/Faqitem/FaqItem.css
@@ -1,12 +1,11 @@
 .faq_title{
-    font-family: 'Signika', sans-serif;
-    border-bottom: solid 2px #F17456;
-    
+    border-bottom: solid 2px #F17456;    
 }
 
-.faq_title:hover{
-    background-color: #F17456;
-    color: #FCFCFC;
+.faq_name{
+    font-family: 'Signika', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
 }
 
 .faq_text{
